etape_14_deployed/k8s/chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-api
  namespace: chatbot
  labels:
    app: chatbot-api
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: chatbot-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP   # Exposé via Ingress uniquement
